fix: Mask rotation transform on ios
  disable hover event on svg (fix ios)

--- a/css/src/elements/_body.scss
+++ b/css/src/elements/_body.scss
@@ -6,4 +6,4 @@
 ////
 
 /// Text default font and color
-body {  background: $black; font-family: $font-text; font-weight: $fw-regular; color: $white; }
+body { padding: 0; background: $black; font-family: $font-text; font-weight: $fw-regular; color: $white; }
